fix: delete tag, text overflow on file name

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -785,6 +785,7 @@ a {
   border-radius: 16px;
   transition: background-color 0.15s ease-in-out;
   padding: 8px 16px;
+  max-width: 300px;
 }
 .image-block:hover {
   background-color: #d30000;
@@ -795,6 +796,8 @@ a {
 }
 .image-block__label {
   cursor: pointer;
+  max-width: 300px;
+  text-overflow: ellipsis;
 }
 
 .delete-file {
